// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Info InlineNotices renders with dismiss 1`] = `
.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: calc(4px * 2);
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  width: 100%;
}

.emotion-2>* {
  min-width: 0;
}

.emotion-4 {
  display: block;
  max-height: 100%;
  max-width: 100%;
  min-height: 0;
  min-width: 0;
}

<div>
  <div
    class="wcpay-inline-notice wcpay-inline-info-notice wcpaytest-notice components-notice is-info is-dismissible"
  >
    <div
      class="components-visually-hidden emotion-0 emotion-1"
      data-wp-c16t="true"
      data-wp-component="VisuallyHidden"
      style="border: 0px; clip: rect(1px, 1px, 1px, 1px); clip-path: inset( 50% ); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; word-wrap: normal;"
    >
      Information notice
    </div>
    <div
      class="components-notice__content"
    >
      <div
        class="components-flex emotion-2 emotion-1"
        data-wp-c16t="true"
        data-wp-component="Flex"
      >
        <div
          class="components-flex-item wcpay-inline-notice__content wcpay-inline-info-notice__content emotion-4 emotion-1"
          data-wp-c16t="true"
          data-wp-component="FlexItem"
        >
          Test notice content
        </div>
      </div>
      <div
        class="components-notice__actions"
      />
    </div>
    <button
      aria-label="Close"
      class="components-button components-notice__dismiss is-small has-icon"
      type="button"
    >
      <svg
        aria-hidden="true"
        focusable="false"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m13.06 12 6.47-6.47-1.06-1.06L12 10.94 5.53 4.47 4.47 5.53 10.94 12l-6.47 6.47 1.06 1.06L12 13.06l6.47 6.47 1.06-1.06L13.06 12Z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Info InlineNotices renders with dismiss and icon 1`] = `
.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: calc(4px * 2);
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  width: 100%;
}

.emotion-2>* {
  min-width: 0;
}

.emotion-4 {
  display: block;
  max-height: 100%;
  max-width: 100%;
  min-height: 0;
  min-width: 0;
}

<div>
  <div
    class="wcpay-inline-notice wcpay-inline-info-notice components-notice is-info is-dismissible"
  >
    <div
      class="components-visually-hidden emotion-0 emotion-1"
      data-wp-c16t="true"
      data-wp-component="VisuallyHidden"
      style="border: 0px; clip: rect(1px, 1px, 1px, 1px); clip-path: inset( 50% ); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; word-wrap: normal;"
    >
      Information notice
    </div>
    <div
      class="components-notice__content"
    >
      <div
        class="components-flex emotion-2 emotion-1"
        data-wp-c16t="true"
        data-wp-component="Flex"
      >
        <div
          class="components-flex-item wcpay-inline-notice__icon wcpay-inline-info-notice__icon emotion-4 emotion-1"
          data-wp-c16t="true"
          data-wp-component="FlexItem"
        >
          <svg
            class="gridicon gridicons-info-outline"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g>
              <path
                d="M13 9h-2V7h2v2zm0 2h-2v6h2v-6zm-1-7c-4.411 0-8 3.589-8 8s3.589 8 8 8 8-3.589 8-8-3.589-8-8-8m0-2c5.523 0 10 4.477 10 10s-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2z"
              />
            </g>
          </svg>
        </div>
        <div
          class="components-flex-item wcpay-inline-notice__content wcpay-inline-info-notice__content emotion-4 emotion-1"
          data-wp-c16t="true"
          data-wp-component="FlexItem"
        >
          Test notice content
        </div>
      </div>
      <div
        class="components-notice__actions"
      />
    </div>
    <button
      aria-label="Close"
      class="components-button components-notice__dismiss is-small has-icon"
      type="button"
    >
      <svg
        aria-hidden="true"
        focusable="false"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m13.06 12 6.47-6.47-1.06-1.06L12 10.94 5.53 4.47 4.47 5.53 10.94 12l-6.47 6.47 1.06 1.06L12 13.06l6.47 6.47 1.06-1.06L13.06 12Z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Info InlineNotices renders with dismiss and icon and actions 1`] = `
.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: calc(4px * 2);
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  width: 100%;
}

.emotion-2>* {
  min-width: 0;
}

.emotion-4 {
  display: block;
  max-height: 100%;
  max-width: 100%;
  min-height: 0;
  min-width: 0;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: calc(4px * 4);
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  width: 100%;
}

.emotion-8>* {
  min-width: 0;
}

<div>
  <div
    class="wcpay-inline-notice wcpay-inline-info-notice components-notice is-info is-dismissible"
  >
    <div
      class="components-visually-hidden emotion-0 emotion-1"
      data-wp-c16t="true"
      data-wp-component="VisuallyHidden"
      style="border: 0px; clip: rect(1px, 1px, 1px, 1px); clip-path: inset( 50% ); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; word-wrap: normal;"
    >
      Information notice
    </div>
    <div
      class="components-notice__content"
    >
      <div
        class="components-flex emotion-2 emotion-1"
        data-wp-c16t="true"
        data-wp-component="Flex"
      >
        <div
          class="components-flex-item wcpay-inline-notice__icon wcpay-inline-info-notice__icon emotion-4 emotion-1"
          data-wp-c16t="true"
          data-wp-component="FlexItem"
        >
          <svg
            class="gridicon gridicons-info-outline"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g>
              <path
                d="M13 9h-2V7h2v2zm0 2h-2v6h2v-6zm-1-7c-4.411 0-8 3.589-8 8s3.589 8 8 8 8-3.589 8-8-3.589-8-8-8m0-2c5.523 0 10 4.477 10 10s-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2z"
              />
            </g>
          </svg>
        </div>
        <div
          class="components-flex-item wcpay-inline-notice__content wcpay-inline-info-notice__content emotion-4 emotion-1"
          data-wp-c16t="true"
          data-wp-component="FlexItem"
        >
          Test notice content
          <div
            class="components-flex wcpay-inline-notice__content__actions emotion-8 emotion-1"
            data-wp-c16t="true"
            data-wp-component="Flex"
          >
            <button
              class="components-button wcpay-inline-notice__action"
              type="button"
            >
              Button
            </button>
            <a
              class="wcpay-inline-notice__action"
              href="https://wordpress.com"
            >
              URL
            </a>
          </div>
        </div>
      </div>
      <div
        class="components-notice__actions"
      />
    </div>
    <button
      aria-label="Close"
      class="components-button components-notice__dismiss is-small has-icon"
      type="button"
    >
      <svg
        aria-hidden="true"
        focusable="false"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m13.06 12 6.47-6.47-1.06-1.06L12 10.94 5.53 4.47 4.47 5.53 10.94 12l-6.47 6.47 1.06 1.06L12 13.06l6.47 6.47 1.06-1.06L13.06 12Z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Info InlineNotices renders with no status and custom icon 1`] = `
.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: calc(4px * 2);
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  width: 100%;
}

.emotion-2>* {
  min-width: 0;
}

.emotion-4 {
  display: block;
  max-height: 100%;
  max-width: 100%;
  min-height: 0;
  min-width: 0;
}

<div>
  <div
    class="wcpay-inline-notice wcpay-inline-undefined-notice components-notice is-info is-dismissible"
  >
    <div
      class="components-visually-hidden emotion-0 emotion-1"
      data-wp-c16t="true"
      data-wp-component="VisuallyHidden"
      style="border: 0px; clip: rect(1px, 1px, 1px, 1px); clip-path: inset( 50% ); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; word-wrap: normal;"
    >
      Information notice
    </div>
    <div
      class="components-notice__content"
    >
      <div
        class="components-flex emotion-2 emotion-1"
        data-wp-c16t="true"
        data-wp-component="Flex"
      >
        <div
          class="components-flex-item wcpay-inline-notice__icon wcpay-inline-undefined-notice__icon emotion-4 emotion-1"
          data-wp-c16t="true"
          data-wp-component="FlexItem"
        >
          <svg
            class="gridicon gridicons-add"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g>
              <path
                d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10S17.523 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
              />
            </g>
          </svg>
        </div>
        <div
          class="components-flex-item wcpay-inline-notice__content wcpay-inline-undefined-notice__content emotion-4 emotion-1"
          data-wp-c16t="true"
          data-wp-component="FlexItem"
        >
          Test notice content
        </div>
      </div>
      <div
        class="components-notice__actions"
      />
    </div>
    <button
      aria-label="Close"
      class="components-button components-notice__dismiss is-small has-icon"
      type="button"
    >
      <svg
        aria-hidden="true"
        focusable="false"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m13.06 12 6.47-6.47-1.06-1.06L12 10.94 5.53 4.47 4.47 5.53 10.94 12l-6.47 6.47 1.06 1.06L12 13.06l6.47 6.47 1.06-1.06L13.06 12Z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Info InlineNotices renders without dismiss and icon 1`] = `
.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: calc(4px * 2);
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  width: 100%;
}

.emotion-2>* {
  min-width: 0;
}

.emotion-4 {
  display: block;
  max-height: 100%;
  max-width: 100%;
  min-height: 0;
  min-width: 0;
}

<div>
  <div
    class="wcpay-inline-notice wcpay-inline-info-notice components-notice is-info"
  >
    <div
      class="components-visually-hidden emotion-0 emotion-1"
      data-wp-c16t="true"
      data-wp-component="VisuallyHidden"
      style="border: 0px; clip: rect(1px, 1px, 1px, 1px); clip-path: inset( 50% ); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; word-wrap: normal;"
    >
      Information notice
    </div>
    <div
      class="components-notice__content"
    >
      <div
        class="components-flex emotion-2 emotion-1"
        data-wp-c16t="true"
        data-wp-component="Flex"
      >
        <div
          class="components-flex-item wcpay-inline-notice__content wcpay-inline-info-notice__content emotion-4 emotion-1"
          data-wp-c16t="true"
          data-wp-component="FlexItem"
        >
          Test notice content
        </div>
      </div>
      <div
        class="components-notice__actions"
      />
    </div>
  </div>
</div>
`;
